# retail-analytics-framework-benchmark

./: .env.example  .gitignore  README.md
dashboard/: .gitignore  README.md  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
dashboard/src/: app.css  app.html
dashboard/src/lib/: colors.ts  db.ts  decision.ts  format.ts  (+2 more)
database/init/: 01-schema.sql
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  CAVEATS.md  CHANGELOG.md  CONTRIBUTING.md  DECISION_TEMPLATE.md  METHODOLOGY.md  RESULTS.md  RUNBOOK.md
generator/: Dockerfile  generate.py  requirements.txt
load-tests/: _shared-options.js  daily-sales.js  discount-impact.js  full-summary.js  hourly-sales.js  location-product-matrix.js  sales-by-location.js  sales-by-payment.js  sales-by-product.js  top-products.js
scripts/: capture-postgres-version.sh  check-reproducibility.sh  cpu-pin.sh  detect-hardware.sh  generate-postgres-config.sh  init-results-db.sh  migrate-results-db-v3c.sh  parity-check.sh  parity_diff.py  parse_k6_summary.py  run-benchmark.sh  sample-rss.sh  test-connection-limits.sh
scripts/tests/: test_cross_loader_equivalence.py  test_parse_k6_summary.py
services/axum-app/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  prebuild.sh
services/axum-app/src/: db.rs  handlers.rs  main.rs  queries.rs  response.rs
services/fastapi-app/: .gitignore  Dockerfile  main.py  prebuild.sh  queries.py  requirements.txt  test_full_summary_sequential.py
services/fastify-app/: .gitignore  Dockerfile  package-lock.json  package.json  prebuild.sh
services/shared/: queries.sql
(+36 files in other folders)
